update account and customer